fixed world clock - hide scrollbar and other stylings

--- a/extension/style.css
+++ b/extension/style.css
@@ -1,3 +1,6 @@
+.mdl-layout__content{
+  overflow:hidden;
+}
 span {
   color: #cccccc;
   vertical-align: 50%;
